Fix: patch library display's text isn't vertically centerred;
Fix: patch library line is too high.

--- a/src/client/styles/daw/patch-library/drop-down.styl
+++ b/src/client/styles/daw/patch-library/drop-down.styl
@@ -1,14 +1,14 @@
 #patchesDropDown
 	display: inline-block
 	.arrow-button
-		top: 3px
+		top: 2px
 		cursor: pointer
 		&:hover
 			text-decoration: none
 	.display-container
 		display: inline-block
 		border: solid 1px #3D3D3D
-		margin-top: 10px
+		margin-top: 15px
 		width: 270px
 		background-color: green
 		-webkit-box-shadow: inset 2px 2px 31px 2px rgba(0,0,0,0.57)
@@ -22,7 +22,7 @@
 			background: -ms-linear-gradient(top, rgba(150, 150, 150, 0.69) 5%, rgba(230, 230, 230, 0) 100%)
 			background: linear-gradient(to bottom, rgba(150, 150, 150, 0.69) 5%, rgba(230, 230, 230, 0) 100%)
 	.dropdown-toggle
-		padding: 10px
+		padding: 12px 10px 8px 10px
 		cursor: pointer
 		color: black
 		font-family: "orbitron_light"
