--- a/src/client/styles/daw/patch-library/patch-library.styl
+++ b/src/client/styles/daw/patch-library/patch-library.styl
@@ -17,7 +17,7 @@
 		cursor: pointer
 		padding: 12px 12px
 		text-decoration: none
-		margin-top: 10px
+		margin-top: 15px
 		&:active
 			background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, rgba(230, 230, 230, 0)), color-stop(1, rgba(150, 150, 150, 0.19)))
 			background: -moz-linear-gradient(top, rgba(230, 230, 230, 0) 5%, rgba(150, 150, 150, 0.19) 100%)
@@ -29,7 +29,7 @@
 	.patch-button
 		position: absolute
 		margin-left: 10px
-		margin-top: 10px
+		margin-top: 15px
 
 	#libActions
 		display: inline-block
